feat: Docker容器化部署 + 全面bug修复
## Docker 化
- 新增 obe-web/Dockerfile (多阶段 Node build + nginx)
- 新增 obe-web/nginx.conf (/api 反向代理 + SPA fallback)
- 替换 obe-server/Dockerfile (多阶段 Maven + JRE Alpine)
- 更新 docker-compose.yml (加入 obe-server/obe-web 服务，健康检查链)
- 新增 .env.example 配置模板
- 更新 init.sql (完整 DDL + admin 种子数据)

## Bug 修复
- 浮点数显示问题: 全部 el-progress 使用 Math.round 避免 76.44999999999999%
- 空 catch 块消除: 所有异常处理加入日志
- PDCA 改进工单: 新增 title/description/priority/assigneeName 字段，数据映射对齐
- GitSyncService: syncByGroupId 修复 lastSyncedAt 时间陷阱
- AchievementService: 小组评价维度不匹配修复
- AIChatController: 移除重复 import，清理死代码
- QaController: 移除 contentType 死代码

## 安全
- application.yml 移除 DeepSeek API key 默认值，改为仅从环境变量读取
- obe-server 以非 root 用户运行
- .env 已加入 .gitignore